syntax = "proto3";

package Common.Proto.Base;

enum NetError {
    SUCCESS = 0;
    ERROR = 1;
}